[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "nothrottling_dl"
author = "theychx"
author-email = "theychx@fastmail.com"
home-page = "https://github.com/theychx/nothrottling-dl"
requires = ["youtube-dl >=2020.3.24"]
requires-python = ">=3.6"
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Development Status :: 2 - Pre-Alpha",
	"Programming Language :: Python :: 3",
	"Topic :: Multimedia",
	"Topic :: Multimedia :: Sound/Audio",
	"Topic :: Multimedia :: Video",
]

[tool.flit.scripts]
nothrottling-dl = "nothrottling_dl.nothrottling_dl:cli"
